# Truth-Engine

./: .env.example  .gitignore  AGENTS.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml  truth_engine_foundation_lessons.md  truth_engine_v1_agent_workflow.md
docs/: README.md  agents-tools-prompts.md  architecture.md  build_state.md  data-model.md  handoff_summary.md  implementation_contract.md  implementation_plan.md  production_plan.md  resolved_decisions.md  runtime.md  scraping_strategy.md  stack_decisions.md  testing.md  workflow.md
examples/: live_request.json
migrations/: env.py
migrations/versions/: 20260310_0001_initial_schema.py  20260312_0002_resume_checkpoints.py  20260312_0003_temporal_workflow_state.py  __init__.py
planning/: README.md  arena_definition.md  build_state.md  implementation_contract.md  implementation_plan.md  outreach_strategy.md  production_plan.md  resolved_decisions.md  stack_decisions.md
src/truth_engine/: __init__.py
src/truth_engine.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/truth_engine/activities/: __init__.py  base.py  (+3 more)
tests/integration/: test_candidate_workflow.py  test_db_cli.py  test_storage_and_tools.py  test_temporal_workflow.py
tests/unit/: test_adapter_resilience.py  test_budgets.py  test_cli_defaults.py  test_contract_models.py  test_dedup.py  test_gates.py  test_learnings.py  test_litellm_runner.py  test_live_queue.py  test_live_request.py  test_live_tool_runtime.py  test_prompt_builder.py  test_run_trace.py  test_temporal_cli.py  test_tool_registry.py
(+69 files in other folders)
